# komurasaki_air_breathing

./: .$air_breathing_layout.drawio.bkp  .$air_breathing_layout.drawio.dtmp  .gitignore  2dArray.cpp  2dArray.h  2darray.natvis  CMakeLists.txt  ClassDiagram.cd  Distribution.py  air_breathing.sln  air_breathing.sln.DotSettings  air_breathing.vcxproj  air_breathing.vcxproj.filters  air_breathing_layout.drawio  animation.py  ausm.h  beam_section.cpp  beam_section.h  build_python_module.bat  build_python_module_linux.sh  build_python_module_windows.bat  compute_animations.py  conversion_grid.py  domain.cpp  domain.h  domain_enums.h  example_python.py  export.h  exportAnimation.py  extractLineData.py  fem_deformation.cpp  fem_deformation.h  fem_model.h  field_quantity.cpp  field_quantity.h  finite_element.cpp  finite_element.h  functions.h  gradient_descent.cpp  gradient_descent.h  (+32 more)
documentation/: .$air_breathing_layout.drawio.bkp  air_breathing_layout.drawio  presentation.md
legacy/: bound_cond.h  fem_model.h  functions.h  muscl.h  parameters.h
private/: 2dArray.cpp  AuxFunctions.cpp  IValve.cpp  beam_section.cpp  boundary.cpp  case_det_tube.cpp  cell_values_container.cpp  domain.cpp  example_cases.cpp  fem_deformation.cpp  field_quantity.cpp  flux_splitting.cpp  gradient_descent.cpp  index2d.cpp  main_library.cpp  mesh_spacing.cpp  microwave.cpp  muscl.cpp  pos2d.cpp  reed_valve.cpp  sim_case.cpp  valve.cpp
public/: 2dArray.h  AuxFunctions.h  IValve.h  beam_section.h  boundary.h  case_det_tube.cpp  cell_values_container.h  domain.h  domain_enums.h  euler_container.h  (+16 more)
(+26 files in other folders)
